Designed and developed the testimonials sections based on the Figma design. Fixed  the alignment and bold formatting of the Success Stories section header.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,21 @@
 @import "tailwindcss";
 
-
+@font-face {
+    font-family: 'Founders Grotesk';
+    src: url('../assets/FoundersGrotesk-Bold.woff2') format('woff2'),
+        url('../assets/FoundersGrotesk-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Founders Grotesk';
+    src: url('../assets/FoundersGrotesk-Regular.woff2') format('woff2'),
+    url('../assets/FoundersGrotesk-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
 .marquee, .marquee2 {
     margin: 0 auto;
     white-space: nowrap;
@@ -28,4 +43,42 @@
     100% {
         transform: translateX(-100%);
     }
+}
+
+@layer base {
+  * {
+    border: var(--border-border);
+    outline: var(--outline-ring) / 50;
+    }
+  body {
+    background-color: var(--bg-background);
+    color: var(--text-foreground);
+    }
+}
+
+.splide__arrow--next , .splide__arrow--prev{
+    position: absolute !important;
+    z-index: 20;
+    padding: 10px;
+    background-color: black;
+    color: white;
+    width: 48px;
+    height: 48px;
+    margin: 30px 0px;
+    border: 1px solid #e4e4e4;
+    /* border-image: linear-gradient(to bottom, white, grey) 1; */
+    border-radius: 8px;
+
+}
+
+.splide__arrow--next{
+    top: 600px;
+    right: 46vw;
+}
+.splide__arrow--prev{
+    top: 600px;
+    left: 46vw;
+}
+.splide__arrow--prev svg ,.splide__arrow--next svg{
+    fill: #fff;
 }
